# fm-amqp-plugin

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build-windows.yml
cmake/: FetchDependencies.cmake  GenerateCACertHeader.cmake  Platform.cmake
docker/: Dockerfile.ubuntu
docs/: new-machine-setup.md
filemaker/: USAGE.md
resources/mac/: Info.plist  PkgInfo
resources/win/: Plugin.rc  verokey-ca.crt
scripts/: build-linux-all.sh  build-linux-docker.sh  build-linux.sh  build-mac.sh  build-openssl-linux.sh  build-openssl-mac.sh  build-openssl-win.bat  build-win.bat  extract-signing-ca.sh  install-linux.sh  notarize-mac.sh  release.sh  sign-win.sh
sdk/: README.md
src/: CACert.cpp  CACert.h  ConnectionManager.cpp  ConnectionManager.h  Functions.cpp  Functions.h  Plugin.cpp  Plugin.h  TextUtil.cpp  TextUtil.h
